[package]
name = "ryu-js"
version = "1.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "boa-dev"]
categories = ["value-formatting", "no-std", "no-std::no-alloc"]
description = "Fast floating point to string conversion, ECMAScript compliant."
documentation = "https://docs.rs/ryu-js"
edition = "2018"
exclude = ["performance.png", "chart/**"]
keywords = ["float"]
license = "Apache-2.0 OR BSL-1.0"
repository = "https://github.com/boa-dev/ryu-js"
rust-version = "1.64"

[features]
# Use smaller lookup tables. Instead of storing every required power of
# 5, only store every 26th entry, and compute intermediate values with a
# multiplication. This reduces the lookup table size by about 10x (only
# one case, and only f64) at the cost of some performance.
small = []

[dependencies]
no-panic = { version = "0.1", optional = true }

[dev-dependencies]
num_cpus = "1.8"
rand = "0.8"
rand_xorshift = "0.3"
criterion = "0.5"

[lib]
bench = false
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# See: https://github.com/rust-lang/rust/pull/84176
rustdoc-args = ["--generate-link-to-definition"]

[[bench]]
name = "bench"
harness = false
